fixed overflowing projects and todos from body and html

--- a/style.css
+++ b/style.css
@@ -2,10 +2,14 @@
   box-sizing: border-box;
 }
 
-body,
 html {
-  background-color: #333;
+  /* background-color: #333; */
   height: 100%;
+  margin: 0;
+}
+
+body {
+  min-height: 100vh;
   margin: 0;
 }
 
@@ -55,29 +59,35 @@ ul {
 #container-all {
   display: flex;
   flex-direction: column;
-  height: 100%;
+  min-height: 100vh;
+  /* background-color: #333; */
 }
 
 #container-top {
   background-color: #43a0c4;
   width: 100%;
-  height: 100px;
+  min-height: 10vh;
   padding-left: 20px;
 }
 
-#container-main {
-  background-color: #ebf2f7;
+/* #container-main {
   height: 100%;
   display: flex;
+  background-color: #333;
+} */
+
+#container-main {
+  display: flex;
+  min-height: 90vh;
+  /* background-color: #333; */
 }
 
 #container-projects {
   display: flex;
   flex-direction: column;
-  /* justify-content: center;
-  align-items: center; */
   background-color: #dadce0;
   width: 100%;
+  min-height: 90vh;
   max-width: 400px;
 }
 
@@ -94,6 +104,8 @@ ul {
   flex-direction: column;
   align-items: center;
   width: 100%;
+  min-height: 90vh;
+  background-color: #ebf2f7;
 }
 
 #todo-form-add,
@@ -127,9 +139,16 @@ ul {
   font-size: 20px;
 }
 
-#project-list {
+/* #project-list,
+#todo-list {
   width: 100%;
-}
+  height: 100%;
+} */
+
+/* #project-ul,
+#todo-ul {
+  height: 100%;
+} */
 
 .hidden {
   display: none;
